--- a/ProjectManager/ProjectManager/Pages/Index.razor
+++ b/ProjectManager/ProjectManager/Pages/Index.razor
@@ -6,76 +6,77 @@
 @attribute [Authorize]
 @inject ProjectService _projects
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Project Manager</PageTitle>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-4">
-            @if (TaskState.UnassignedProjects.Count() > 0)
-            {
+@if (TaskState != null && _user != null)
+{
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
                 <Heading Size="HeadingSize.Is2">
-                    New Projects                    
-                    <Badge Color="Color.Secondary" Pill Style="font-size:.5em;">@TaskState.UnassignedProjects.Count()</Badge>
-                    <Button Color="Color.Secondary" Pill Style="font-size:.3em;" Clicked="async () => await IgnoreAll()"><Icon Name="IconName.Times" aria-label="Clear All" /> Clear</Button>                    
+                    Welcome @_user.FirstName @_user.LastName!
                 </Heading>
-                <ListGroup Style="min-height:350px;max-height: 350px;overflow: auto">
-                    @foreach (ProjectResponse pr in TaskState.UnassignedProjects)
-                    {
-                        <ListGroupItem>
-                            @pr.Code - @pr.Name
-                            <Button Color="Color.Secondary" Clicked="async () => { await TaskState.AddProject(pr); }"><Icon Name="IconName.Add" aria-label="Add" /> </Button>
-                            <Button Color="Color.Secondary" Clicked="async () => { await TaskState.IgnoreProject(pr); }"><Icon Name="IconName.Times" aria-label="Ignore" /> </Button>
-                        </ListGroupItem>
-                    }
-                </ListGroup>
-            }
-            <br/>
-            <Heading Size="HeadingSize.Is2">
-                My Projects
-                <Badge Color="Color.Secondary" Pill Style="font-size:.5em;">@TaskState.ProjectStates.Count()</Badge>
-            </Heading>
-            <ListGroup Style="min-height:350px;max-height: 350px;overflow: auto" Mode="ListGroupMode.Selectable" @bind-SelectedItem="ProjectSelected">
-                @foreach (ProjectStates ps in TaskState.ProjectStates)
-                {
-                <ListGroupItem Name="@ps.Id.ToString()">@ps.Project.ProjectId - @ps.Project.Name</ListGroupItem>
-                }
-            </ListGroup>
-        </div>
-        <div class="col-md-8">
-            <ProjectManager.Components.ProjectView />
+            </div>
+            <div class="col-md-6">
+                <Accordion Class="accordion-flush">
+                    <ProjectManager.Components.TaskGroupView Name="Today" Tasks="TaskState.DailyUserTasks" Expanded="true" AllowNew="false" MultipleProjects="true" />
+                    <ProjectManager.Components.TaskGroupView Name="Later This Week" Tasks="TaskState.WeeklyUserTasks" Expanded="true" AllowNew="false" MultipleProjects="true" />
+                    <ProjectManager.Components.TaskGroupView Name="After This Week" Tasks="TaskState.OtherUserTasks" Expanded="true" AllowNew="false" MultipleProjects="true" />
+                </Accordion>
+            </div>
         </div>
     </div>
-</div>
+}
+else
+{
+    <p>Task state failure</p>
+}
 
 @code {
 
     [CascadingParameter]
-    public TaskStateMachine TaskState { get; set; }
-    string ProjectSelected { get
-        { return _projectSelected; } set { _projectSelected = value; ProjectSelection(); } }
+    public TaskStateMachine? TaskState { get; set; }
+    public UserProfile _user;
 
-    string _projectSelected;
+    string ProjectSelected
+    {
+        get { return _projectSelected; }
+        set { _projectSelected = value; ProjectSelection(); }
+    }
+
+    string _projectSelected = "";
 
     protected override async Task OnInitializedAsync()
     {
+        if (TaskState == null)
+            throw new InvalidOperationException("Task state null");
+
         await TaskState.SyncProjects();
+        _user = await TaskState.GetUserAsync();
 
         await base.OnInitializedAsync();
     }
 
     private async Task IgnoreAll()
     {
+        if (TaskState == null)
+            throw new InvalidOperationException("Task state null");
+
         foreach (ProjectResponse projectResponse in TaskState.UnassignedProjects)
         {
             await TaskState.IgnoreProject(projectResponse, false);
         }
         await TaskState.SyncProjects();
         StateHasChanged();
-    }    
+
+    }
 
     private void ProjectSelection()
     {
-        if(!String.IsNullOrEmpty(ProjectSelected))
+        if (TaskState == null)
+            throw new InvalidOperationException("Task state null");
+
+        if (!String.IsNullOrEmpty(ProjectSelected))
         {
             var proj = TaskState.ProjectStates.FirstOrDefault(ps => ps.Id.ToString() == ProjectSelected);
             if (proj != null)
