--- a/ProjectManager/ProjectManager/Pages/_Layout.cshtml
+++ b/ProjectManager/ProjectManager/Pages/_Layout.cshtml
@@ -18,6 +18,7 @@
 
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Bootstrap5/blazorise.bootstrap5.css" rel="stylesheet" />
+    <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
 </head>
 <body>
     @RenderBody()
