--- a/src/ProjectManager/Shared/MainLayout.razor
+++ b/src/ProjectManager/Shared/MainLayout.razor
@@ -50,8 +50,8 @@
                                 </AuthorizeView>
 
                                 <BarDropdownDivider />
-                                <BarDropdownItem To="finance/consultinginvoices">Overdue Consulting Invoices</BarDropdownItem>
-                                <BarDropdownItem To="finance/sfinvoices">Overdue SF Invoices</BarDropdownItem>
+                                <BarDropdownItem To="finance/consultinginvoices">Consulting Invoices</BarDropdownItem>
+                                <BarDropdownItem To="finance/sfinvoices">SF Invoices</BarDropdownItem>
                             </BarDropdownMenu>
                         </BarDropdown>
                     </BarItem>
