New job improvements and quote doc roundtrip

--- a/src/ProjectManager/Components/MonthlyInvoicing.razor
+++ b/src/ProjectManager/Components/MonthlyInvoicing.razor
@@ -114,10 +114,10 @@
 
             if(i.Draft)
             {
-                UnapprovedInvoiceTotal += i.GrossValue.Value;
+                UnapprovedInvoiceTotal += i.NettValue.Value;
             } else
             {
-                InvoiceTotal += i.GrossValue.Value;
+                InvoiceTotal += i.NettValue.Value;
             }
 
             StateHasChanged();
