--- a/src/ProjectManager/Shared/MainLayout.razor
+++ b/src/ProjectManager/Shared/MainLayout.razor
@@ -36,6 +36,17 @@
                             <BarItem>
                                 <BarLink To="workplan">Workplan</BarLink>
                             </BarItem>
+                            <BarItem>
+                        <BarDropdown>
+                            <BarDropdownToggle>New</BarDropdownToggle>
+                            <BarDropdownMenu>                                
+                                        <BarDropdownItem To="new/project">Project</BarDropdownItem>
+                                        <BarDropdownItem To="new/quote">Quote</BarDropdownItem>
+                                    
+                                                                
+                            </BarDropdownMenu>
+                        </BarDropdown>
+                    </BarItem>
                         </Authorized>
                     </AuthorizeView>
 
