End to end test of saving quotes natively

--- a/src/ProjectManager/Pages/New/NewProjectView.razor
+++ b/src/ProjectManager/Pages/New/NewProjectView.razor
@@ -3,6 +3,7 @@
 @using CommonDataModels.Inputs
 @using Darnton.Blazor.Leaflet.LeafletMap
 @using ProjectManager.Data
+@using ProjectManager.Data.Native
 @inject GeocodeService _geocodeService
 @inject NativeFiles _native
 
