--- a/src/ProjectManager/Shared/MainLayout.razor
+++ b/src/ProjectManager/Shared/MainLayout.razor
@@ -3,6 +3,7 @@
 @using Blazorise
 @using Blazorise.Components
 @using Blazorise.Snackbar
+@using ProjectManager.Data.Native
 @inherits LayoutComponentBase
 @inject TaskStateMachine _stateMachine;
 @inject NavigationManager _navMan;
