--- a/src/ProjectManager.Wpf/MainWindow.xaml
+++ b/src/ProjectManager.Wpf/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ProjectManager.Wpf"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="JPP Project Manager" Height="450" Width="800">
     <DockPanel>
         <wv2:WebView2 Name="webView" />
     </DockPanel>
